chore: rename package to staged_primitives
chore: add dropped staged_primitives module

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,4 +1,4 @@
-@misc{stprimitives,
+@misc{staged_primitives,
   author        = {Pedro Rivero},
   title         = {Staged Primitives},
   year          = {2023},
