chore: add DOI through Zenodo

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -2,5 +2,8 @@
   author        = {Pedro Rivero},
   title         = {Staged Primitives},
   year          = {2023},
-  howpublished  = {\url{https://github.com/Qiskit-Extensions/staged-primitives}},
+  publisher     = {Zenodo},
+  version       = {0.1.0},
+  doi           = {10.5281/zenodo.7613387},
+  url           = {https://doi.org/10.5281/zenodo.7613387},
 }
